--- a/codealong/DOM.html
+++ b/codealong/DOM.html
@@ -27,7 +27,7 @@
             // if(div.style.display == "none"){
                 div.style.display = "Block"
             // }else{
-            //     (div.style.display == "none") ;
+            //     (div.style.display = "none") ;
             // }
         }
         function MyFunction2(){
