--- a/codealong/Dompro.html
+++ b/codealong/Dompro.html
@@ -15,12 +15,14 @@
 <script>
     // Root node
     // console.log(document.documentElement)
-    console.log(document.body)
-    console.log(document.head)
+    console.log(document.body) ;
+    console.log(document.head) ;
 
     // children 
-    // console.log(document.body.childNodes)
-    console.log(document.body.children)
+    // console.log(document.body.childNodes) ;
+    // console.log(document.body.children) ;
+    console.log(document.body.firstElementChild) ;
+    console.log(document.body.lastElementChild) ;
 </script>
 </body>
 </html>
