--- a/codealong/Dompro.html
+++ b/codealong/Dompro.html
@@ -12,17 +12,42 @@
    <li>Second Element</li>
    <li>third Element</li>
 </ul>
+<table>
+    <tr>
+        <td>one</td>
+        <td>two</td>
+    </tr>
+    <tr>
+        <td>three</td>
+        <td>four</td>
+    </tr>
+</table>
 <script>
-    // Root node
+    
+    // // Root node
     // console.log(document.documentElement)
-    console.log(document.body) ;
-    console.log(document.head) ;
+    // console.log(document.body) ;
+    // console.log(document.head) ;
 
-    // children 
+    // // children 
     // console.log(document.body.childNodes) ;
     // console.log(document.body.children) ;
-    console.log(document.body.firstElementChild) ;
-    console.log(document.body.lastElementChild) ;
+    // console.log(document.body.firstElementChild) ;
+    // console.log(document.body.lastElementChild) ;
+
+    // // Siblings
+    // console.log(document.body.children) ;
+    // const ulTag = document.body.children[0]
+    // console.log(ulTag) ;
+
+
+    // //  Table DOM Manipulation
+    // const tableTag = document.body.children[1]
+    // console.log(tableTag.rows) ;
+
+
+
+
 </script>
 </body>
 </html>
