--- a/codealong/Dompro.html
+++ b/codealong/Dompro.html
@@ -21,9 +21,13 @@
         <td>three</td>
         <td>four</td>
     </tr>
+    <tr>
+        <td>Five</td>
+        <td>Six</td>
+    </tr>
 </table>
 <script>
-    
+
     // // Root node
     // console.log(document.documentElement)
     // console.log(document.body) ;
@@ -42,8 +46,8 @@
 
 
     // //  Table DOM Manipulation
-    // const tableTag = document.body.children[1]
-    // console.log(tableTag.rows) ;
+    const tableTag = document.body.children[1]
+    console.log(tableTag.rows) ;
 
 
 
