--- a/DOM.html
+++ b/DOM.html
@@ -34,25 +34,23 @@
       document.querySelector(".class3").style.color='red'
 
       document.querySelectorAll(".divs")[0].style.border="2px solid black"
-      document.querySelectorAll(".divs")[0].innerText="Fourth"
+      document.querySelectorAll(".divs")[0].innerText="Fourth Div"
 
       document.querySelectorAll(".divs")[1].style.border="2px solid black"
-      document.querySelectorAll(".divs")[1].innerText="Fifth"
+      document.querySelectorAll(".divs")[1].innerText="Fifth Div"
 
       document.querySelectorAll(".divs")[2].style.border="2px solid black"
-      document.querySelectorAll(".divs")[2].innerText="Sixth"
+      document.querySelectorAll(".divs")[2].innerText="Six Div"
 
       document.querySelectorAll("div div")[1].innerHTML="<div class='new_htlm'> <p>This is my first assignment of Document Object Model</p> </div> "
 
       document.querySelectorAll("div")[10].innerHTML="<h1>My Experience with AirCampus</h1>"
       document.querySelectorAll("div")[10].style.textDecoration="underline"
       document.querySelectorAll("div")[10].style.color="lightcoral"
-      document.querySelectorAll("div")[10].style.fontSize="32px"
+      document.querySelectorAll("div")[10].style.fontSize="30px"
 
       document.querySelectorAll("p")[1].innerText="Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, dolorum expedita? Quae suscipit enim rerum possimus amet, non nisi impedit "
-      document.querySelectorAll("p")[1].style.color='green'
-
-      
+      document.querySelectorAll("p")[1].style.color='green' 
     </script>
 
   </body>
