--- a/Manipulation/index.html
+++ b/Manipulation/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1 id="show">We are Learning  Javascript</h1>
   <h2>Subscribe geeky shows</h2>
+  <h3>Right Now</h3>
   <p id="geek">Hello <span>geeky shows</span><em>world</em><span>Youtube</span></p>
 
 
@@ -60,6 +61,14 @@ let Specific = document.getElementById("find").getElementsByTagName("span") ;
 document.write(Specific) ;
     console.log(Specific) ;
 
+    // Finding Length 
+
+let data = document.getElementsByTagName("p") ;
+let len = data.length
+document.write(len + "<br>" ) ;
+console.log(len) ;
+document.write(data) ;
+console.log(data) ;
   </script> 
 </body>
 </html>
