DOM Ist Assignment (" Practicing Selectors ")

--- a/DOM-Assignment/DOM1.html
+++ b/DOM-Assignment/DOM1.html
@@ -29,7 +29,7 @@
       let secondElement = document.getElementsByTagName("div")[1];
 
       secondElement.innerHTML =
-        "<p> My name is Prakash Kumar. I love coding. </p>";
+        "<p> My name is Prakash Kumar. I love Coding. </p>";
 
       let thirdElement = document.getElementsByTagName("div")[2];
 
@@ -62,7 +62,6 @@
       document.querySelectorAll("div")[10].style.color = "tomato";
       document.getElementsByTagName("p")[2].innerText =
         "Aircampus follows a unique learning pattern. The process of learning with Aircampus is by exploring and doing. This includes in-class activities such as solving a problem, debating a topic, making a decision or designing a website."
-
       console.log(document.getElementsByTagName("p")[2]);
     </script>
   </body>
