--- a/Manipulation/index.html
+++ b/Manipulation/index.html
@@ -206,6 +206,20 @@
 // const Search = document.querySelectorAll("#geek > .Dragon > span.mySpan")
 // document.write(Search) ;
 // console.log(Search) ;
+
+// Finding Length
+let lengt = document.querySelectorAll(".Dragon").length
+document.write(lengt) ;
+console.log(lengt) ;
+
+// OR Printing all element
+
+let leg = document.querySelectorAll(".myClass");
+const Present = leg.length ;
+document.write(Present) ;
+console.log(Present) ;
+
+
 </script> 
 </body>
 </html>
