Parent Node  and    Parent Element

--- a/Manipulation/Node.html
+++ b/Manipulation/Node.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  id="myid" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -92,6 +92,114 @@
 
 //    finding length
  console.log(result.attributes.length)
+
+
+// <--------!  DOM Traversal   !-------->
+
+//  Parent Node :-  The parentNode read only priperty returns the parent of the specified node in the DOM tree
+// Parent Element :- The parentElement property returns the parent element of the specified element . if the parent node is not an element node , it returns Null .
+
+let parent = document.getElementById("myid") ;
+console.log(parent.parentNode) ;        // it returns Document
+console.log(parent.parentElement);    // it returns null
+
+parent = document.getElementById("myId") ;
+console.log(parent.parentNode) ;        // it returns Body
+console.log(parent.parentElement);    // it returns Body
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
