Revising DOM Traversal , Node Object Properties .

--- a/Manipulation/Node.html
+++ b/Manipulation/Node.html
@@ -147,7 +147,7 @@ console.log(Chi.firstChild) ;
 
 
 // firstElementChild Property : It ignores Text , Comment
-Chil = document.getElementById("Ist")
+Chil = document.getElementById("Ist") ;
 console.log(Chil.firstElementChild) ;
 
 Chi = document.getElementById("myid2")
